--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -1,26 +1,7 @@
 .container {
-  height: calc(100vh - 100px);
-}
-.top {
-  height: 30%;
-  overflow-y: scroll;
-}
-.bottom {
-  height: 70%;
-
-  overflow-y: scroll;
+  height: calc(100vh - 90px);
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
 }
 
-@media (max-width: 977px) {
-  .container {
-    overflow-y: scroll;
-  }
-  .top {
-    height: fit-content;
-    margin-bottom: 30px;
-  }
-
-  .bottom {
-    height: fit-content;
-  }
-}
