--- a/src/Components/DashbordCmp/DashBody/DashBody.module.css
+++ b/src/Components/DashbordCmp/DashBody/DashBody.module.css
@@ -2,18 +2,19 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
-  height: 95%;
-  overflow: hidden;
+
+  /* height: 200px; */
 }
 
 .top {
   grid-column: span 9;
   grid-row: span 8;
-  /* box-shadow: var(--box-shadow); */
   border-radius: 16px;
+  /* background-color: rgba(0, 128, 0, 0.226); */
 }
 
 .right {
+  /* background-color: rgba(0, 0, 255, 0.233); */
   background-image: linear-gradient(
     30deg,
     transparent,
@@ -23,21 +24,22 @@
   );
   grid-column: span 3;
   grid-row: span 12;
-  /* overflow-y: scroll; */
   padding: 10px;
   box-shadow: var(--box-shadow);
   border-radius: 16px;
   border: 1px solid #27252541;
+  
 }
-.right h6,
+/* .right h6,
 .bottom h6 {
   padding: 5px 0;
-}
+} */
 
 .bottom {
+  /* background-color: rgba(255, 0, 0, 0.144); */
   padding: 10px;
   border-radius: 16px;
-  /* border: 1px solid #27252541; */
+  border-top: 1px solid #9999996b;
   /* box-shadow: var(--box-shadow); */
   grid-column: span 9;
   grid-row: span 4;
@@ -62,14 +64,14 @@
 
   .right {
     width: 95%;
-    height: 300px;
+    /* height: 300px; */
     overflow: hidden;
   }
 
   .bottom {
     width: 95%;
-    overflow-x: scroll;
-    overflow-y: hidden;
+    /* overflow-x: scroll;
+    overflow-y: hidden; */
     height: 150px;
   }
 }
