--- a/src/Components/Tables/RecentActivies/Resent.module.css
+++ b/src/Components/Tables/RecentActivies/Resent.module.css
@@ -5,36 +5,32 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 .content {
   width: 100%;
-  height: 80%;
+  padding: 5px 0;
+  /* height: 80%; */
   display: flex;
   align-items: center;
   justify-content: space-between;
   align-items: center;
 }
-.content li {
-  height: 50%;
-  width: 20%;
-  min-width: 110px;
+.content div{
+  width: 100%;
+
 }
 
+
 .icon {
-  width: 35px;
-  height: 35px;
+  width:26px;
+  height: 26px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
   margin-bottom: 5px;
-  background-color: rgba(0, 0, 0, 0.137);
+  font-size: 12px;
+  background-color: rgba(0, 0, 0, 0.219);
 }
-
-/* @media (max-width: 977px) {
-  .content {
-    width: 500px;
-  }
-} */
