--- a/src/Components/Tables/SellOrder/SellOrder.module.css
+++ b/src/Components/Tables/SellOrder/SellOrder.module.css
@@ -1,12 +1,12 @@
 .container{
   height: 100%;
-  overflow-y:scroll ;
+  /* overflow-y:scroll ; */
   
 }
 .table{
   text-align: center;
   width: 100%;
-  height: 80%;
+  /* height: 80%; */
   border-collapse: collapse;
 }
 
