--- a/src/index.css
+++ b/src/index.css
@@ -53,10 +53,12 @@ body {
   width: 7px;
   height: 7px;
   transition: 0.3s;
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--color);
+  cursor: pointer;
 }
 
 ul {
@@ -87,8 +89,8 @@ a {
 
 .container-section {
   width: 100%;
-  padding-right:30px ;
-  padding-left:30px ;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 .button {
