--- a/src/Auth/MainAuth.module.css
+++ b/src/Auth/MainAuth.module.css
@@ -116,16 +116,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  /* flex-direction: column; */
   width: 100%;
 }
 
 .form form .inputContainer input {
   width: 100%;
-  padding-left: 30px;
+  padding: 10px 15px 10px 30px;
   height: 30px;
   border-radius: 7px;
   border: none;
   background-color: #ccc;
+  font-size: 16px ;
 }
 
 .form form .inputContainer input:focus {
@@ -150,7 +152,7 @@
   text-transform: uppercase;
 }
 .form form .imgContainer label {
-  font-size: 12px;
+  font-size: 15px;
   padding: 5px;
 }
 
@@ -161,4 +163,14 @@
   gap: 5px;
   color: rgb(92, 90, 90);
   font-size: 12px;
+}
+
+.error {
+  width: 100%;
+  align-items:start;
+  padding: 5px 10px;
+  font-size: 13px;
+  color: rgb(201, 25, 25);
+  background-color: rgba(206, 69, 69, 0.199);
+  border-radius: 12px;
 }
