--- a/src/Auth/MainAuth.module.css
+++ b/src/Auth/MainAuth.module.css
@@ -89,7 +89,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 15px;
 }
 .form form {
   gap: 10px;
@@ -102,11 +102,15 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 5px;
+  height: 100px;
+  width: 100px;
+  position: relative;
+  background-image: var(--background-image);
+  border-radius: 50%;
 }
 .form form .imgContainer img {
-  height: 80px;
-  width: 80px;
+  height: 100%;
+  width: 100%;
   border-radius: 50%;
   background-image: var(--background-image);
 }
@@ -141,8 +145,7 @@
   transform: translateY(-50%);
   color: rgb(92, 90, 90);
 }
-.form form button,
-.form form .imgContainer label {
+.form form button{
   width: 100%;
   height: 30px;
   border-radius: 15px;
@@ -151,9 +154,14 @@
   color: white;
   text-transform: uppercase;
 }
+
 .form form .imgContainer label {
-  font-size: 15px;
-  padding: 5px;
+  font-size: 50px;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10000;
 }
 
 .form a {
@@ -168,7 +176,7 @@
 .error {
   width: 100%;
   align-items:start;
-  padding: 5px 10px;
+  padding: 2px 5px;
   font-size: 13px;
   color: rgb(201, 25, 25);
   background-color: rgba(206, 69, 69, 0.199);
